<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <developers>
        <developer>
            <name>Paul Marcelin Bejan</name>
            <email>paulmarcelinbejan.developer@gmail.com</email>
        </developer>
    </developers>

    <name>training</name>
    <description>Paul Marcelin Bejan Training</description>

    <groupId>com.paulmarcelinbejan</groupId>
    <artifactId>training</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <properties>
        <!-- JAVA -->
        <java.version>17</java.version>
        <!-- MAVEN -->
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <!-- SPRING -->
        <spring-boot.version>3.1.0</spring-boot.version>
        <!-- LOMBOK -->
        <lombok.version>1.18.28</lombok.version>
        <!-- MAPSTRUCT -->
        <mapstruct.version>1.5.5.Final</mapstruct.version>
	    <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <!-- TOOLBOX -->
        <paulmarcelinbejan-toolbox.version>1.0.0</paulmarcelinbejan-toolbox.version>
    </properties>

    <modules>
        <module>design-pattern</module>
        <module>hacker-rank</module>
        <module>my-tests</module>
        <module>project-euler</module>
        <module>stack-overflow</module>
    </modules>

    <dependencyManagement>
        <dependencies>

            <!-- ToolBox dependency -->
			<dependency>
				<groupId>com.paulmarcelinbejan.toolbox</groupId>
				<artifactId>toolbox</artifactId>
				<version>${paulmarcelinbejan-toolbox.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			
        </dependencies>
    </dependencyManagement>

    <dependencies>

        <!-- Spring Boot dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
        </dependency>

        <!-- Lombok dependencies -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>

        <!-- ToolBox dependency -->
        <dependency>
            <groupId>com.paulmarcelinbejan.toolbox</groupId>
            <artifactId>toolbox-base</artifactId>
        </dependency>
        <dependency>
            <groupId>com.paulmarcelinbejan.toolbox</groupId>
            <artifactId>toolbox-test</artifactId>
        </dependency>
        <dependency>
            <groupId>com.paulmarcelinbejan.toolbox</groupId>
            <artifactId>toolbox-utils-csv</artifactId>
        </dependency>
        <dependency>
            <groupId>com.paulmarcelinbejan.toolbox</groupId>
            <artifactId>toolbox-utils-json</artifactId>
        </dependency>
        <dependency>
            <groupId>com.paulmarcelinbejan.toolbox</groupId>
            <artifactId>toolbox-utils-pdf</artifactId>
        </dependency>
        <dependency>
            <groupId>com.paulmarcelinbejan.toolbox</groupId>
            <artifactId>toolbox-utils-yaml</artifactId>
        </dependency>
        <dependency>
	        <groupId>com.paulmarcelinbejan.toolbox</groupId>
	        <artifactId>toolbox-utils-mapping</artifactId>
	    </dependency>
        <dependency>
            <groupId>com.paulmarcelinbejan.toolbox</groupId>
            <artifactId>toolbox-utils-math</artifactId>
        </dependency>
        <dependency>
            <groupId>com.paulmarcelinbejan.toolbox</groupId>
            <artifactId>toolbox-utils-time</artifactId>
        </dependency>
        <dependency>
            <groupId>com.paulmarcelinbejan.toolbox</groupId>
            <artifactId>toolbox-utils-text</artifactId>
        </dependency>
        <dependency>
            <groupId>com.paulmarcelinbejan.toolbox</groupId>
            <artifactId>toolbox-utils-reflection</artifactId>
        </dependency>

        <!-- dependencies -->

    </dependencies>

    <build>
		<pluginManagement>
	        <plugins>
	            <plugin>
	                <groupId>org.springframework.boot</groupId>
	                <artifactId>spring-boot-maven-plugin</artifactId>
	                <version>${spring-boot.version}</version>
	                <configuration>
	                    <excludes>
	                        <exclude>
	                            <groupId>org.projectlombok</groupId>
	                            <artifactId>lombok</artifactId>
	                        </exclude>
	                    </excludes>
	                </configuration>
	            </plugin>
	            <plugin>
		            <groupId>org.apache.maven.plugins</groupId>
		            <artifactId>maven-compiler-plugin</artifactId>
		            <version>${maven-compiler-plugin.version}</version>
		            <configuration>
		                <source>${java.version}</source> <!-- depending on your project -->
		                <target>${java.version}</target> <!-- depending on your project -->
		                <annotationProcessorPaths>
		                    <path>
		                        <groupId>org.mapstruct</groupId>
		                        <artifactId>mapstruct-processor</artifactId>
		                        <version>${mapstruct.version}</version>
		                    </path>
		                    <!-- other annotation processors -->
		                    <path>
				                <groupId>org.projectlombok</groupId>
				                <artifactId>lombok</artifactId>
				                <version>${lombok.version}</version>
				            </path>
				            <dependency>
				                <groupId>org.projectlombok</groupId>
				                <artifactId>lombok-mapstruct-binding</artifactId>
				                <version>${lombok-mapstruct-binding.version}</version>
				            </dependency>
		                </annotationProcessorPaths>
		            </configuration>
		        </plugin>
	        </plugins>
		</pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
				<groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-compiler-plugin</artifactId>
			</plugin>
        </plugins>
    </build>

</project>
